app/assets/stylesheets/modules/dropdown.css.scss
.toolbar {
  a:link, a:visited {
    color: #fff;
  }
}

.dropdown {
  display: inline-block;
  position: relative;
}

.dropdown-menu {
  background-color: rgba(20,20,20,.9);

  > li > a.dropdown-link:hover {
    color: #ddd;
  }
}

.temporal-dropdown {
  width: 350px;

  input {
    width: 200px;
  }
}

.xdsoft_datetimepicker, .xdsoft_timepicker {
  z-index:101;
}

// Hide jquery.datetimepicker's year field
.recurring-datetimepicker .xdsoft_year {
  display: none;
}

input.day-of-year-input {
  width: 100px;
}

.day-of-year-picker {
  margin-left: 8px;
}

.temporal-error {
  display: none;
  color: red;
}

// Override default Bootstrap tab CSS
.nav-tabs {
  border-color: #000;
  margin: 15px 15px 0 15px;

  a {
    background: none;
    color: #999;
  }

  li.active a, li.active:hover a {
    background: #333;
    border-color: #000;
    border-bottom-color: #333;
    color: #fff;
  }

  li:hover a {
    background: #222;
    border-color: #222;
  }
}

.tab-content {
  margin: 0 15px 12px 15px;
  padding: 10px;
  background: #333;
  border-left: 1px solid #000;
  border-right: 1px solid #000;
  border-bottom: 1px solid #000;

  label {
    display: inline-block;
    font-weight: bold;
    width: 60px;
  }

  input[type="text"] {
    display: inline-block;
    width: 160px;
    margin: 0;
  }
}

// Override default Slider CSS
.range-slider {
  margin-top: 10px;

  #temporal-slider {
    display: none;
  }

  input {
    width: 210px;
  }
}

.slider {
  width: 110px;
}
.slider.slider-horizontal {
  width: 110px;
}

